[project]
name = "hands-off"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Shafqat sarwar", email = "khansarwar1@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.4.0",
]

[project.scripts]
hands-off = "hands_off:main"
agent = "hands_off.main:run_main"
agent1 = "hands_off.main1:run_main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
