[project]
name = "hands-off"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Shafqat sarwar", email = "khansarwar1@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.3",
    "openai-agents>=0.4.0",
]

[project.scripts]
hands-off = "hands_off:main"
agent = "hands_off.main:run_main"
agent1 = "hands_off.main1:run_main"
[tool.uv.scripts]
agent3 = "python src/hands_off/main2.py"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
